test/sematest/invalid/invalid_lvalue3.java
class Foo {
  public static void main(String[] args) {
    1 = 3 + 2;
  }
}
